UI: fix scrollbar corner style

--- a/packages/ui/css/preset.css
+++ b/packages/ui/css/preset.css
@@ -243,6 +243,10 @@
   &::-webkit-scrollbar-track {
     background: transparent;
   }
+
+  &::-webkit-scrollbar-corner {
+    display: none;
+  }
 }
 
 @utility fd-steps {
